crates/compiler/src/tests/e2e/good/0406_struct_builder_impl/main.gom
struct Builder {
    parts: string,
}

impl Builder {
    fn new() -> Builder { Builder { parts: "" } }
    fn add(self: Builder, s: string) -> Builder { Builder { parts: self.parts + s } }
    fn finish(self: Builder) -> string { "[" + self.parts + "]" }
}

fn main() {
    println(Builder::new().add("a").add("b").add("c").finish());
}
