crates/compiler/src/tests/e2e/bad/0563_go_option_last_wrong_return/main.gom
#[go_option_last]
extern "go" "strings" "CutPrefix" cut_prefix(s: string, prefix: string) -> string

fn main() -> unit {
    ()
}
